# C-Beleg

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  httpd.conf
app/: Dockerfile
app/src/: default.c  hello.c
app/src/lib/: database.c  database.h  model.h
app/src/pages/: default.c  new.c
src/lib/: CMakeLists.txt  database.c  database.h  html.c  html.h  htmlHelper.h  models.h  query.c  query.h
src/pages/: CMakeLists.txt  create.c  default.c  delete.c  edit.c  new.c  update.c
