cmake_minimum_required(VERSION 3.12)

add_executable(default default.c)
add_executable(edit edit.c)
add_executable(delete delete.c)
add_executable(new new.c)
add_executable(create create.c)
add_executable(update update.c)

target_link_libraries(default database html query)
target_link_libraries(new html)
target_link_libraries(edit database html query)
target_link_libraries(delete database html query)
target_link_libraries(create database html query)
target_link_libraries(update database html query)